# faith

./: .gitignore  Argeement.md  CMakeLists.txt  README.md
3rdpary/: .gitignore
core/: CMakeLists.txt  config.h  config.h.in  cpxutil.h  idleservice.cpp  idleservice.h  launcher.cc  launcher.h
core/config/: configmanager.h
core/network/: broadcaster.h
core/plugin/: pluginmamanger.h
core/ui/: .gitignore  CMakeLists.txt  aboutwidget.cpp  aboutwidget.h  animationutil.cpp  animationutil.h  chatlayout.cpp  chatlayout.h  chatmessage.cpp  chatmessage.h  chatwidget.cpp  chatwidget.h  cubeanimationstackedwidget.cpp  cubeanimationstackedwidget.h  faithfloatbar.cpp  faithfloatbar.h  localrun.cpp  localrun.h  localrun.ui  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  movingwidget.cpp  movingwidget.h  resources.qrc  richedit.cpp  richedit.h  roomwidget.cpp  roomwidget.h  searchbar.cpp  searchbar.h  settingsdialog.ui  settingswidget.cpp  settingswidget.h  slideanimationstackedwidget.cpp  slideanimationstackedwidget.h  sphereanimationstackedwidget.cpp  sphereanimationstackedwidget.h  (+10 more)
core/ui/res/: BasicTheme.qss
core/ui/res/obsthemes/: Acri.qss  Dark.qss  Rachni.qss  System.qss
docs/: README.md  design.rp
exec/: CMakeLists.txt  app.qrc  main.cc
plugins/: CMakeLists.txt  README.md
